--- a/index.html
+++ b/index.html
@@ -5,10 +5,21 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" rel="stylesheet">
     <title>小程序后台管理</title>
 </head>
 <body>
-    <div id="app-root"></div>
-    <script src="./home.js"></script>
+<div id="app-root"></div>
+<script src="./home.js"></script>
+<scrtip type="text/javascript">
+    fetch("https://www.qaformath.com/zbuniserver-api/category/get-categories-list", {
+    headers: {
+    'Cache-Control': 'no-cache'
+    }
+    })
+    .then(function(response){
+    console.log(response);
+    });
+</scrtip>
 </body>
 </html>
