--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 </head>
 <body>
 <div id="app-root"></div>
+<script type="text/javascript" src="/Dll.js"></script>
 <script src="./home.js"></script>
 <script type="text/javascript">
     fetch("https://www.qaformath.com/zbuniserver-api/category/get-categories-list", {
