--- a/index.html
+++ b/index.html
@@ -7,6 +7,15 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" rel="stylesheet">
     <title>小程序后台管理</title>
+    <style>
+        * {
+            margin:0;
+            pdding:0;
+        }
+        html{
+            background-color: rgb(48,48,48);
+        }
+    </style>
 </head>
 <body>
 <div id="app-root"></div>
