--- a/index.html
+++ b/index.html
@@ -6,18 +6,12 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" rel="stylesheet">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/latest/css/bootstrap.min.css">
     <title>小程序后台管理</title>
     <style>
         * {
             margin:0;
             pdding:0;
-        }
-        html{
-            background-color: rgb(48,48,48);
-        }
-        input:-webkit-autofill {
-            background: rgb(48,48,48) none;
-            color: #000;
         }
     </style>
 </head>
